--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@alessiocancian/react-native-actionsheet": "^3.1.2",
     "@react-native-community/datetimepicker": "^6.1.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
