--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@alessiocancian/react-native-actionsheet": "^3.1.2",
     "@react-native-community/datetimepicker": "^6.1.3",
+    "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1"
   },
