--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
