--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -25,7 +25,8 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
