--- a/Mobile/android/app/build.gradle
+++ b/Mobile/android/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: "com.android.application"
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'AntDesign.ttf' ] // Name of the font files you want to copy
+    iconFontNames: [ 'AntDesign.ttf', 'MaterialCommunityIcons.ttf' ] // Name of the font files you want to copy
 ]
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
