--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -26,6 +26,7 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-searchable-dropdown": "^1.1.3",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
