--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1293.0",
     "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-picker-select": "^8.0.4",
