--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -24,6 +24,7 @@
     "react-native-calendars": "^1.1293.0",
     "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-paper": "^5.1.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
